--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.5+6
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -31,7 +31,7 @@ dependencies:
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
-  collection: 1.19.0
+  # collection: 1.19.0
   dropdown_button2: 2.3.9
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
@@ -58,6 +58,8 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   share_plus: ^10.1.2
   geolocator: ^13.0.2
+  razorpay_flutter: ^1.3.7
+  # data_table_2: ^2.6.0
 
 
 dependency_overrides:
@@ -65,10 +67,20 @@ dependency_overrides:
   uuid: ^4.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
+  image: 4.0.17
   flutter_lints: 4.0.0
   lints: 4.0.0
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
