--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.7+8
+version: 1.0.8+9
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -58,6 +58,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   share_plus: ^10.1.2
   geolocator: ^13.0.2
+  permission_handler: ^11.0.0
   razorpay_flutter: ^1.3.7
   # data_table_2: ^2.6.0
 
