--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,7 +42,10 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
-
+<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>whatsapp</string>
+</array>
 
 
 	<key>NSLocationWhenInUseUsageDescription</key>
